HW 7.1 done